ui-ux: Fix minor fonts/spacing issues

--- a/css/app.sass
+++ b/css/app.sass
@@ -331,6 +331,12 @@ header
 					font-size: 0.9rem
 					margin-bottom: 0.5rem
 
+					.category
+						a
+							color: $color-black
+							font-weight: bold
+							text-decoration: underline
+
 				.title
 					margin-bottom: 0.5rem
 
@@ -521,6 +527,7 @@ header
  * Footer
  */
 footer
+	padding-top: 4rem
 	background: $color-white
 	
 	.contact-links
